--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="control_face">Face detection</string>
     <string name="unfollow">Unfollow</string>
     <string name="follow_me">Follow me</string>
+    <string name="follow_status_waiting">Waiting for a target ...</string>
 </resources>
